# pyclo

.github/workflows/: build.yml
pyclothoids/: CMakeLists.txt
pyclothoids/.github/workflows/: build.yml
pyclothoids/src_py/: CMakeLists.txt
pyclothoids/submodules/pybind11/: CMakeLists.txt  README.rst  setup.py  test_gil_scoped.py  test_kwargs_and_defaults.py  test_methods_and_attributes.py  test_native_enum.cpp  test_native_enum.py  test_numpy_dtypes.cpp  test_numpy_dtypes.py  test_opaque_types.py  test_pickling.py  test_pytypes.cpp  test_pytypes.py  test_smart_ptr.py  test_stl.py
pyclothoids/submodules/pybind11/.github/workflows/: ci.yml  emscripten.yaml  pip.yml
pyclothoids/submodules/pybind11/docs/: classes.rst  requirements.txt
pyclothoids/submodules/pybind11/docs/advanced/: classes.rst  deprecated.rst  misc.rst  smart_ptrs.rst
pyclothoids/submodules/pybind11/include/pybind11/: attr.h  cast.h  functional.h  native_enum.h  numpy.h  pybind11.h  pytypes.h
pyclothoids/submodules/pybind11/include/pybind11/detail/: class.h  common.h  function_record_pyobject.h  internals.h  native_enum_data.h  struct_smart_holder.h  type_caster_base.h  using_smart_holder.h
pyclothoids/submodules/pybind11/pybind11/: _version.py
pyclothoids/submodules/pybind11/tests/: CMakeLists.txt  conftest.py  test_callbacks.py  test_class.cpp  test_class.py  test_class_sh_basic.cpp  test_class_sh_basic.py  test_class_sh_factory_constructors.cpp  test_class_sh_factory_constructors.py  test_class_sh_trampoline_basic.cpp  test_class_sh_trampoline_basic.py  test_class_sh_trampoline_shared_ptr_cpp_arg.cpp  test_enum.py
pyclothoids/submodules/pybind11/tests/extra_python_package/: test_files.py
pyclothoids/submodules/pybind11/tests/pure_cpp/: smart_holder_poc.h  smart_holder_poc_test.cpp
